cmake_minimum_required(VERSION 3.20)
project(Rindlisbacher_cs201)

set(CMAKE_CXX_STANDARD 14)

add_executable(Rindlisbacher_cs201
        Hello_World.cpp)

add_executable(Hello_World Hello_World.cpp)
add_executable(Homework0 Homework0.cpp)
add_executable(PickANumber PickANumber.cpp)
add_executable(BoxesBoxesBoxes BoxesBoxesBoxes.cpp)
add_executable(Fizz Fizz.cpp)
add_executable(Switches Switches.cpp)
add_executable(Homework_1_Diamond Homework_1_Diamond.cpp)
add_executable(Homework_1_greatest Homework_1_greatest.cpp)
add_executable(Functions Functions.cpp)